--- a/biblioteca/src/main/resources/application.properties
+++ b/biblioteca/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.username				= postgres
 spring.datasource.password				= 1212
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=on-param
+server.error.include-exception=false
